# simleng_ai

./: .gitattributes  .gitignore  MANIFEST.in  MANIFEST.in~  pyproject.toml  pyproject.toml~  setup.cfg  setup.py  setup.py~
backup/: pyproject.toml  req.py  simleng_copy.py  simleng_py3.8-3.11.2.py
simlemg_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
simleng_ai/: __init__.py  __init__.py~  _version.py  pyproject.toml_copy  pyproject.toml~  run_simleng_line.py  simleng.py
simleng_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simleng_ai/abstract/: __init__.py  data_abstract.py
simleng_ai/data_manager/: .#quality.py  __init__.py  __init__.py~  cross_validation_tests.py  feature_eng.py  feature_eng.py~  generation.py  generation.py~  quality.py  quality.py~
simleng_ai/featureseng/: features_ext_sklearn.py  features_ext_sklearn.py~  features_num_sel_statsmodels.py  features_sel_sklearn.py  features_sel_statsmodels.py  strategies_features_extraction.py  strategies_features_selection.py
simleng_ai/ini/: __init__.py  init.py
simleng_ai/input_file/: simlengin02091000.txt  simlengin08091019.txt  simlengin08091019.txt~  simlengin15091216.txt  simlengin19091246.txt~  simlengin21090917.txt  simlengin25121700.txt  simlengin29021026.txt
simleng_ai/output/: #report.py#  graphics.py  picture.py  report.py  report.py~  report0.py  report0.py~  table.py
simleng_ai/resources/: db.py  design.py  distributions.py  distributions.py~  io.py  manipulation_data.py  ml.py  ml.py~  output.py  output.py~  package.py  pandas.py  pandas.py~  scrapping.py  (+1 more)
(+47 files in other folders)
