

[build-system]
requires=["setuptools>=42","versioneer[toml]","importlib.metadata"]							
build-backend="setuptools.build_meta"

#configuring metadata
[metadata]
version = "attr: simleng.__version__"
dynamic=["version","keywords","license"]
scripts=["bin/api.py"]
[project]
name="simleng_ai"
authors=[{name="Ph.D. Ruperto Pedro Bonet Chaple", email="ruperto.bonet@modelphysmat.com"}]
version="0.1.0"
description="A module to develop Data_Analysis starategies"
readme="Readme.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
# License, see https://choosealicense.com
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sednabcn/simleng_ai"
"Bug Tracker" = "https://github.com/sednabcn/simleng_ai/issues"
#[tols.setuptools.packages]

[tool.setuptools.packages.find]
where = ["."]  # list of default folders that contain the packages (["."])
include = ["*"] #package names should match the glob patterns (["*"] by default)
exclude = ["*.~","#*",".#*"]  #exclude packages matching these glob patterns (empty by default)
namespaces =false  # to disable scanning PEP 420 namespaces (true by default)



